--- a/Basic-JavaScript-Projects/Project1_expressions_alert/index.html
+++ b/Basic-JavaScript-Projects/Project1_expressions_alert/index.html
@@ -9,6 +9,7 @@
 <body>
     <button onclick="My_First_Function()"></button>
     <p id="Green_Text">Hello, world!</p>
+    <button onclick="this.innerHTML=Date()">The time is ?</button>
 </body>
 
 </html>
