added project3 math

--- a/Basic-JavaScript-Projects/Projects2_functions/index.html
+++ b/Basic-JavaScript-Projects/Projects2_functions/index.html
@@ -10,9 +10,10 @@
 
     <p id="say-sth">hello</p>
     <button onclick="returnSth()">Hello</button>
-
-
     <p id="concatenate" onclick="concat()">Hi, please click me</p>
+    <p id="add">Hello! Lets add!</p>
+    <button onclick="add()">Click to concatenate user inputs.</button>
+    <button onclick="additionFunction()">Click to add math</button>
 </body>
 
 </html>
