--- a/Basic-JavaScript-Projects/Project9_countdown_slideshow/index.html
+++ b/Basic-JavaScript-Projects/Project9_countdown_slideshow/index.html
@@ -9,16 +9,16 @@
 <body>
     <!--step 170-->
     <p>How many seconds would you lik to set your alarm for?</p>
-    <input id="sec" value="" />
+    <input id="seconds" value="" />
     <button onclick="countdown()">Start</button>
     <p id="timer"></p>
     <!--slideshow container-->
     <div class="slideshow-container">
         <!--full width images with number and caption text-->
-        <div class="mySlideFade">
-            <div class="numText"></div>
-            <img scr="" alt="">
-            <div class="text"></div>
+        <div class="mySlides fade">
+            <div class="numbertext"></div>
+            <img scr="" alt="" style="width:100%">
+            <div class="text">caption text</div>
         </div>
         <!--next and prev buttons-->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
