--- a/Basic-JavaScript-Projects/Project9_countdown_slideshow/index.html
+++ b/Basic-JavaScript-Projects/Project9_countdown_slideshow/index.html
@@ -16,9 +16,21 @@
     <div class="slideshow-container">
         <!--full width images with number and caption text-->
         <div class="mySlides fade">
-            <div class="numbertext"></div>
-            <img scr="" alt="" style="width:100%">
+            <div class="numbertext">1/3</div>
+            <img src="Images/thumbnail_1.jpg" alt="" style="width:100%">
             <div class="text">caption text</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">2/3</div>
+            <img src="Images/thumbnail_3.jpg" alt="" style="width:100%">
+            <div class="text">caption two</div>
+        </div>
+
+        <div class="mySlides fade">
+            <div class="numbertext">3/3</div>
+            <img src="Images/thumbnail_5.jpg" alt="" style="width:100%;">
+            <div class="text">caption three</div>
         </div>
         <!--next and prev buttons-->
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
