--- a/Basic-JavaScript-Projects/Project10_loops_arrays/index.html
+++ b/Basic-JavaScript-Projects/Project10_loops_arrays/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <script src="JS/main.js"></script>
+    <script src="JS/main.js" defer></script>
 </head>
 
 <body>
@@ -18,6 +18,10 @@
     <button onclick="arrFunction()">Click for array</button>
     <p id="constant"></p>
     <button onclick="constantFunction()">Click for constant</button>
+    <p id="p" onclick="letFunction()">click to let</p>
+    <p id="v" onclick="varFunction()">click to var</p>
+    <p id="return" onclick="returnGreeting()">return</p>
+    <p id="car"></p>
 </body>
 
 </html>
