--- a/Basic-JavaScript-Projects/Project10_loops_arrays/index.html
+++ b/Basic-JavaScript-Projects/Project10_loops_arrays/index.html
@@ -22,6 +22,10 @@
     <p id="v" onclick="varFunction()">click to var</p>
     <p id="return" onclick="returnGreeting()">return</p>
     <p id="car"></p>
+    <p id="breakOut"></p>
+    <button onclick="breakOut()">Click to break</button>
+    <p id="continueOn"></p>
+    <button onclick="contOn()">click to continue</button>
 </body>
 
 </html>
