--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Calculator</title>
-    <script src="JS/main.js"></script>
+    <script src="JS/main.js" defer></script>
     <meta name="description" content="A basic HTML, CSS, and JavaScript Calculator">
     <meta name="author" content="Jenny Louie">
     <link rel="stylesheet" href="CSS/calculator.css">
