--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -36,7 +36,7 @@
 
             <button type="button" class="decimal function" value=".">.</button>
             <button type="button" class="all-clear function" value="all-clear">AC</button>
-            <button type="button" class="equal-sign operation" value="=">=</button>
+            <button type="button" class="equal-sign operator" value="=">=</button>
         </div>
     </div>
 </body>
