--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -11,9 +11,9 @@
 </head>
 
 <body>
-    <div class="calculator">
-        <input type="text" class="calculator-screen" value="0" disabled/>
-        <div class="calculator-keys">
+    <div class="Calculator">
+        <input type="text" class="Calculator-screen" value="0" disabled/>
+        <div class="Calculator-keys">
 
             <button type="button" class="operator" value="+">+</button>
             <button type="button" class="operator" value="-">-</button>
