--- a/Pizza_Project/pizza.html
+++ b/Pizza_Project/pizza.html
@@ -11,7 +11,7 @@
 
 <body>
     <div id="menuBG">
-        <h1 style="margin:0 0px 0 20px;">Butter Time</h1>
+        <h1>Butter Time</h1>
         <input id="btnOrder" type="button" onclick="getReceipt()" value="Place Order">
         <form id="frmMenu">
             <div class="menu left">
